[gd_scene load_steps=5 format=3 uid="uid://byxx6xjtmttns"]

[ext_resource type="Script" path="res://scenes/levels/hud/Hud.gd" id="2_i7xkb"]
[ext_resource type="Theme" uid="uid://yxnf3f24u3jl" path="res://resources/themes/default.tres" id="2_syobf"]
[ext_resource type="Texture2D" uid="uid://c7moeeh87ncwl" path="res://assets/images/Presentes_small.png" id="3_tw2tf"]
[ext_resource type="Texture2D" uid="uid://c13idntio7thm" path="res://assets/images/Bigorna_small.png" id="4_nr8vq"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("2_i7xkb")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_syobf")
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Presents" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(290, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Presents"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_tw2tf")
stretch_mode = 4

[node name="LabelPresentsCount" type="Label" parent="MarginContainer/VBoxContainer/Presents"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 40
text = "00"
horizontal_alignment = 2

[node name="LabelPresentsMaxCount" type="Label" parent="MarginContainer/VBoxContainer/Presents"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 40
text = " / 50"
horizontal_alignment = 2

[node name="StrikesBar" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="StrikesBarBack" type="TextureRect" parent="MarginContainer/VBoxContainer/StrikesBar"]
modulate = Color(0, 0, 0, 0.243137)
custom_minimum_size = Vector2(640, 0)
layout_mode = 1
offset_right = 640.0
offset_bottom = 128.0
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("4_nr8vq")
stretch_mode = 1

[node name="StrikesBarFront" type="TextureRect" parent="MarginContainer/VBoxContainer/StrikesBar"]
unique_name_in_owner = true
layout_mode = 1
offset_bottom = 128.0
scale = Vector2(0.6, 0.6)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("4_nr8vq")
expand_mode = 1
stretch_mode = 1
